...
                                <rect key="frame" x="110" y="396" width="140" height="31"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="140" id="ue0-uj-Q4H"/>
                                    <constraint firstAttribute="height" constant="31" id="vbg-xO-9h5"/>
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <state key="normal" title="Normal Start">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="normalsiginWithSender:" destination="Mvp-fp-b10" eventType="touchUpInside" id="rZP-5E-HS8"/>
                                    <segue destination="fVz-3h-4Ya" kind="show" identifier="normal" id="XAt-H5-9bo"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUh-QM-giL" customClass="GIDSignInButton">
                                <rect key="frame" x="131" y="511" width="113" height="51"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h0Q-xh-0cy">
                                        <rect key="frame" x="17" y="1" width="46" height="30"/>
                                        <state key="normal" title="G">
                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
...
            </objects>
            <point key="canvasLocation" x="-3853.5999999999999" y="573.46326836581716"/>
        </scene>
        <!--Advertisement1-->
        <scene sceneID="CCe-KV-h5r">
            <objects>
                <tableViewController title="Advertisement1" id="BN6-2k-V1n" customClass="BeaconTableViewController" customModule="iRadar" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="409" sectionHeaderHeight="28" sectionFooterHeight="28" id="OZT-ZL-trD">
                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <view key="tableHeaderView" contentMode="scaleToFill" id="8aq-yn-Jyl">
...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="BN6-2k-V1n" id="0Ft-Df-oPo"/>
                            <outlet property="delegate" destination="BN6-2k-V1n" id="hD0-eG-pDC"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Advertisement" id="P0B-Nf-j1A">
                        <barButtonItem key="leftBarButtonItem" tag="2" style="plain" id="7Bh-Vx-xpo">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="iSv-F1-bPA">
                                <rect key="frame" x="16" y="7" width="83" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Back"/>
                                <connections>
                                    <action selector="backWithSender:" destination="BN6-2k-V1n" eventType="touchUpInside" id="i0K-xb-oLb"/>
                                    <segue destination="zmu-3j-zYv" kind="show" identifier="back" id="Slb-ep-LnS"/>
                                </connections>
                            </button>
                            <color key="tintColor" red="0.0" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="backWithSender:" destination="BN6-2k-V1n" id="lPg-Ls-drA"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Signout" style="plain" id="F9I-lx-MSU">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="vO4-6v-Q9s">
                                <rect key="frame" x="276" y="7" width="83" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Signout"/>
                                <connections>
                                    <action selector="didTapSignOutWithSender:" destination="BN6-2k-V1n" eventType="touchUpInside" id="Eqj-s1-o6b"/>
...
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Tz-Lx-ED5">
                                <rect key="frame" x="231" y="491" width="105" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="105" id="3Z5-qr-eya"/>
                                </constraints>
                                <state key="normal" title="Continue">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="showWithSender:" destination="fVz-3h-4Ya" eventType="touchUpInside" id="y52-hC-W9k"/>
                                    <segue destination="M3b-yk-87H" kind="show" identifier="view" id="5T7-lP-o5w"/>
                                </connections>
...
