...
    
    override func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
        
        var advertis: String?
        let cell = tableView.dequeueReusableCell(withIdentifier: "beacontableviewcell", for: indexPath) as! BeaconTableViewCell
        
        let shareAction = UITableViewRowAction(style: UITableViewRowActionStyle.normal , title: "Click to Share"){
            
            (rowaction , IndexPath) -> Void in
            
            let shareActionSheet = UIAlertController(title: nil,message:"Share With",preferredStyle: .actionSheet)
            
            let facebookshareAction  = UIAlertAction(title: "Facebook", style: .default) { (action) -> Void in
                
                if
                    SLComposeViewController.isAvailable(forServiceType: SLServiceTypeFacebook)
                    
                {
                    let fbComposer = SLComposeViewController(forServiceType: SLServiceTypeFacebook)
...
                    self.present(fbComposer!, animated: true, completion: nil)
                }
                    
                else
                {
                    let alert = UIAlertController(title: "Accounts", message: "Please login to a Facebook account to share.", preferredStyle: UIAlertControllerStyle.alert)
                    alert.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.default, handler: nil))
                    self.present(alert, animated: true, completion: nil)

                }
                
                
            }
            
            let twittershareAction  = UIAlertAction(title: "Twitter", style: .default) { (action) -> Void in
                
                if
                    SLComposeViewController.isAvailable(forServiceType: SLServiceTypeTwitter)
                    
                {
                    let twComposer = SLComposeViewController(forServiceType: SLServiceTypeTwitter)
...
            }
            
            
            
            //
            let alertController = UIAlertController(
                title: "Title",
                message: "Message",
                preferredStyle: UIAlertControllerStyle.alert
            )
            
            let cancelAction = UIAlertAction(
                title: "Cancel",
...
